<!--
  ~ Copyright (C) 2020 Oscar Gallon <oscarg798@gmail.com>
  ~ This file is part of Cope.
  ~ Cope is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Signup</string>
    <string name="btn_sign_up_text">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="et_password_hint">Password</string>
    <string name="et_password_confirmation_hint">Password Confirmation</string>
    <string name="et_name_hint">Full name</string>
    <string name="name_error">Name must not be empty</string>
    <string name="email_error">You must provide a valid email</string>
    <string name="password_confirmation_error">Password should have at least 6 characters</string>
    <string name="password_error">Password should have at least 6 characters</string>
    <string name="general_error">Something went wrong please try again</string>
    <string name="password_do_not_match_error">Password and password confirmation should match</string>
</resources>
