<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context="co.com.cope.SignUpActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content">

        <EditText android:layout_width="match_parent"
                  android:id="@+id/etName"
                  android:hint="@string/et_name_hint"
                  android:inputType="textEmailAddress"
                  android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tilEmail"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/tilName"
            android:layout_height="wrap_content">

        <EditText android:layout_width="match_parent"
                  android:id="@+id/etEmail"
                  android:hint="@string/email_hint"
                  android:inputType="textEmailAddress"
                  android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:id="@+id/tilPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            android:layout_height="wrap_content">

        <EditText android:layout_width="match_parent"
                  android:id="@+id/etPassword"
                  android:hint="@string/et_password_hint"
                  android:inputType="textPassword"
                  android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:id="@+id/tilPasswordConfirmation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            android:layout_height="wrap_content">

        <EditText android:layout_width="match_parent"
                  android:id="@+id/etPasswordConfirmation"
                  android:inputType="textPassword"
                  android:hint="@string/et_password_confirmation_hint"
                  android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/btn_sign_up_text"
            app:layout_constraintTop_toBottomOf="@+id/tilPasswordConfirmation"
            android:id="@+id/btnSignUp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
